--- a/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
@@ -125,10 +125,11 @@
                                                         <th scope="col" style="width: 15%; display: none;">Category</th>
                                                         <th scope="col" style="width: 20%;">Item Name</th>
                                                         <th scope="col" style="width: 10%;">Wash</th>
-                                                        <th scope="col" style="width: 5%;" class="text-end">Pcs</th>
+                                                        <th scope="col" style="width: 5%;" class="text-enda">Pcs</th>
                                                         <th scope="col" style="width: 10%;" class="text-end">Rate</th>
                                                         <th scope="col" style="width: 10%;" class="text-end">Add-On</th>
                                                         <th scope="col" style="width: 10%;" class="text-end">Total</th>
+                                                        <th scope="col" style="width: 10%;" class="text-end">Location</th>
                                                         <th scope="col" style="width: 15%;">Options</th>
                                                     </tr>
                                                 </thead>
