--- a/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableRow.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableRow.html
@@ -5,8 +5,9 @@
     <td class="OrderItemsItemWashClass"></td>
     <td class="OrderItemsItemPcsClass text-end"></td>
     <td class="OrderItemsRateClass text-end"></td>
-    <td class=" OrderItemsAddOnClass text-end"></td>
+    <td class="OrderItemsAddOnClass text-end"></td>
     <td class="OrderItemsTotalClass text-end"></td>
+    <td class="OrderItemsFactoryClass text-end"></td>
     <td>
         <button type="button" class="OrderItemsDeleteButtonClass btn btn-outline-danger">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
