--- a/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
@@ -66,7 +66,7 @@
                                                 </select>
                                                 <label for="WashSelectId">Select Wash</label>
                                             </div>
-                                       
+
                                             <div class="col-md-2">
                                                 <div class="form-floating">
                                                     <input type="number" class="form-control RateClass" name="Rate">
@@ -119,38 +119,13 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <table class="table" id="ItemsTableId">
-                                                <thead class="table-primary">
-                                                    <tr>
-                                                        <th scope="col" style="width: 5%;">#</th>
-                                                        <th scope="col" style="width: 15%; display: none;">Category</th>
-                                                        <th scope="col" style="width: 20%;">Item Name</th>
-                                                        <th scope="col" style="width: 10%;">Wash</th>
-                                                        <th scope="col" style="width: 5%;" class="text-enda">Pcs</th>
-                                                        <th scope="col" style="width: 10%;" class="text-end">Rate</th>
-                                                        <th scope="col" style="width: 10%;" class="text-end">Add-On</th>
-                                                        <th scope="col" style="width: 10%;" class="text-end">Total</th>
-                                                        <th scope="col" style="width: 10%;" class="text-end">Location</th>
-                                                        <th scope="col" style="width: 15%;">Options</th>
-                                                    </tr>
+                                                <thead class="table-primary" id="ItemsTableHeaderId">
+
                                                 </thead>
                                                 <tbody id="ItemsTableBodyId">
                                                 </tbody>
                                                 <tfoot id="ItemsTableFootId">
-                                                    <tr class="table-info">
-                                                        <th>#</th>
-                                                        <th style="display: none;"></th>
-                                                        <th></th>
-                                                        <th></th>
-                                                        <th scope="col" style="width: 5%;" class="text-end"
-                                                            id="ItemsTableFootPcs">
-                                                            Pcs</th>
-                                                        <th></th>
-                                                        <th scope="col" style="width: 10%;" class="text-end"
-                                                            id="ItemsTableFootAddOn">Add-On</th>
-                                                        <th scope="col" style="width: 10%;" class="text-end"
-                                                            id="ItemsTableFootTotal">Total</th>
-                                                        <th></th>
-                                                    </tr>
+                                                
                                                 </tfoot>
                                             </table>
                                         </div>
