--- a/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableRow.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableRow.html
@@ -2,7 +2,7 @@
     <td><input type="button" value="" class="OrderItemsSerialButtonClass"></td>
     <td class="OrderItemsCategoryClass" style="display:none;"></td>
     <td class="OrderItemsItemNameClass"></td>
-    <td class="OrderItemsItemWashClass"></td>
+    <td class="OrderItemsItemWashClass" style="display:none;"></td>
     <td class="OrderItemsItemPcsClass text-end"></td>
     <td class="OrderItemsRateClass text-end"></td>
     <td class="OrderItemsAddOnClass text-end"></td>
