--- a/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
@@ -73,7 +73,7 @@
                                                     <label for="RateId">Rate</label>
                                                 </div>
                                             </div>
-                                            <div class="col-md-2">
+                                            <div class="col-md-1">
                                                 <div class="form-floating">
                                                     <input type="number" class="form-control PcsClass" value="1"
                                                         name="Pcs">
@@ -91,6 +91,10 @@
                                                     <label>Select Factory</label>
                                                 </div>
                                             </div>
+                                            <div class="col-md-3">
+                                                <input class="form-control DeliveryDateTimeClass" type="datetime-local">
+                                            </div>
+
                                             <div class="col-md-2">
                                                 <button type="button" class="btn btn-success AddItemButtonClass"
                                                     id="AddItemButtonId">Add
@@ -125,7 +129,7 @@
                                                 <tbody id="ItemsTableBodyId">
                                                 </tbody>
                                                 <tfoot id="ItemsTableFootId">
-                                                
+
                                                 </tfoot>
                                             </table>
                                         </div>
