--- a/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableFooter.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableFooter.html
@@ -3,10 +3,11 @@
     <th style="display: none;"></th>
     <th></th>
     <th style="display: none;"></th>
-    <th scope="col" style="width: 5%;" class="text-end" id="ItemsTableFootPcs">
+    <th scope="col" class="text-end" id="ItemsTableFootPcs">
         Pcs</th>
     <th></th>
-    <th scope="col" style="width: 10%;" class="text-end" id="ItemsTableFootAddOn">Add-On</th>
-    <th scope="col" style="width: 10%;" class="text-end" id="ItemsTableFootTotal">Total</th>
+    <th scope="col" class="text-end" id="ItemsTableFootAddOn">Add-On</th>
+    <th scope="col" class="text-end" id="ItemsTableFootTotal">Total</th>
+    <th scope="col"></th>
     <th></th>
 </tr>
