--- a/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableHeader.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/Html/OrderItemsTableHeader.html
@@ -4,9 +4,10 @@
     <th scope="col" style="width: 20%;">Item Name</th>
     <th scope="col" style="width: 10%; display: none;">Wash</th>
     <th scope="col" style="width: 5%;" class="text-enda">Pcs</th>
-    <th scope="col" style="width: 10%;" class="text-end">Rate</th>
+    <th scope="col" style="width: 5%;" class="text-end">Rate</th>
     <th scope="col" style="width: 10%;" class="text-end">Add-On</th>
     <th scope="col" style="width: 10%;" class="text-end">Total</th>
-    <th scope="col" style="width: 10%;" class="text-end">Location</th>
+    <th scope="col" style="width: 10%;">Location</th>
+    <th scope="col" style="width: 10%;">Delivery</th>
     <th scope="col" style="width: 15%;">Options</th>
 </tr>
