--- a/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
+++ b/Cleaning/POS/Booking/Tabs/AddItem/AddItemCommon.html
@@ -447,8 +447,18 @@
         }, jFLocalCreateButton({ inItemName: "Shirt" }),
             jFLocalCreateButton({ inItemName: "Pant" }));
 
+        let jFLocalCurrentDateTime = () => {
+            let date = new Date();
 
+            let dd = (date.getDate() < 10 ? '0' : '') + date.getDate();
+            let MM = ((date.getMonth() + 1) < 10 ? '0' : '') + (date.getMonth() + 1);
+            let yyyy = date.getFullYear();
+            let HH = date.getHours();
+            let mm = date.getMinutes();
+            let ss = date.getSeconds();
 
+            return `${yyyy}-${MM}-${dd}T${HH}:${mm}:${ss}`;
+        };
       //  root.render(jFLocalCreateButton({ inItemName: "Shirt" }), jFLocalCreateButton({ inItemName: "Pant" }));
 
     </script>
