--- a/ZipToTable.html
+++ b/ZipToTable.html
@@ -34,6 +34,9 @@
                 <tr>
                     <th>#</th>
                     <th>File Name</th>
+                    <th>Date</th>
+                    <th>Dir</th>
+                    <th class="text-end">Size</th>
                 </tr>
             </thead>
             <tbody id="result"> </tbody>
@@ -57,6 +60,36 @@
         "use strict";
 
         var $result = document.getElementById("result");
+
+        let jFLocalToTable = (relativePath, zipEntry, inLoopIndex) => {
+            let jVarLocalLi = document.createElement("tr");
+            let jVarLocalTd1 = document.createElement("td");
+            jVarLocalTd1.innerHTML = inLoopIndex;
+            jVarLocalLi.appendChild(jVarLocalTd1);
+
+            let jVarLocalTd = document.createElement("td");
+            jVarLocalTd.innerHTML = zipEntry.name;
+            jVarLocalLi.appendChild(jVarLocalTd);
+
+            let jVarLocalTdDate = document.createElement("td");
+            jVarLocalTdDate.innerHTML = zipEntry.date;
+            jVarLocalLi.appendChild(jVarLocalTdDate);
+
+            let jVarLocalTdDir = document.createElement("td");
+            jVarLocalTdDir.innerHTML = zipEntry.dir;
+            jVarLocalLi.appendChild(jVarLocalTdDir);
+
+            if (zipEntry.dir === false) {
+                let jVarLocalTdSize = document.createElement("td");
+                jVarLocalTdSize.classList.add("text-end");
+
+                jVarLocalTdSize.innerHTML = zipEntry._data.uncompressedSize;
+                jVarLocalLi.appendChild(jVarLocalTdSize);
+            };
+
+            $result.appendChild(jVarLocalLi);
+            inLoopIndex += 1;
+        };
 
         document.getElementById("file").addEventListener("change", function (evt) {
             // remove content
@@ -85,23 +118,34 @@
                         $title.appendChild(jVarLocalSpan);
 
                         zip.forEach(function (relativePath, zipEntry) {  // 2) print entries
-                            // console.log("zipEntry : ", zipEntry, LoopIndex);
-                            let jVarLocalLi = document.createElement("tr");
-                            let jVarLocalTd1 = document.createElement("td");
-                            jVarLocalTd1.innerHTML = jVarLoopIndex;
-                            jVarLocalLi.appendChild(jVarLocalTd1);
+                            jFLocalToTable(relativePath, zipEntry, jVarLoopIndex);
+                            console.log("zipEntry : ", zipEntry, relativePath);
+                            // let jVarLocalLi = document.createElement("tr");
+                            // let jVarLocalTd1 = document.createElement("td");
+                            // jVarLocalTd1.innerHTML = jVarLoopIndex;
+                            // jVarLocalLi.appendChild(jVarLocalTd1);
 
-                            let jVarLocalTd = document.createElement("td");
-                            jVarLocalTd.innerHTML = zipEntry.name;
-                            jVarLocalLi.appendChild(jVarLocalTd);
-                            $result.appendChild(jVarLocalLi);
+                            // let jVarLocalTd = document.createElement("td");
+                            // jVarLocalTd.innerHTML = zipEntry.name;
+                            // jVarLocalLi.appendChild(jVarLocalTd);
+                            // $result.appendChild(jVarLocalLi);
                             jVarLoopIndex += 1;
+
+
+
                         });
                     }, function (e) {
-                        $result.append($("<div>", {
-                            "class": "alert alert-danger",
-                            text: "Error reading " + f.name + ": " + e.message
-                        }));
+                        let jVarLocalLi = document.createElement("tr");
+                        let jVarLocalTd1 = document.createElement("td");
+                        jVarLocalTd1.innerHTML = "Error reading " + f.name + ": " + e.message;
+                        jVarLocalLi.appendChild(jVarLocalTd1);
+
+                        $result.appendChild(jVarLocalLi);
+
+                        // $result.append($("<div>", {
+                        //     "class": "alert alert-danger",
+                        //     text: "Error reading " + f.name + ": " + e.message
+                        // }));
                     });
             }
 
